--- a/packages/ui-library/src/css/forms/_dropdown-button.scss
+++ b/packages/ui-library/src/css/forms/_dropdown-button.scss
@@ -23,7 +23,7 @@
 
         &:before {
             font-family: $icon-font;
-            content: '\2b';
+            content: $icon-plus;
             font-size: 10px;
             position: absolute;
             left: 7px;
