--- a/packages/ui-library/src/css/_details-page.scss
+++ b/packages/ui-library/src/css/_details-page.scss
@@ -1,4 +1,3 @@
-
 .details-page {
     .details-url {
         margin: -10px 0 15px 0;
@@ -152,7 +151,7 @@
         background-color: $color-stratus;
 
         &:after {
-            content: '\58';
+            content: $icon-clear;
         }
     }
     .approve-btn {
@@ -160,7 +159,7 @@
         background-color: $color-success;
 
         &:after {
-            content: '\70';
+            content: $icon-approve;
         }
     }
     .resend-btn {
@@ -168,7 +167,7 @@
         background-color: $color-active;
 
         &:after {
-            content: '\72';
+            content: $icon-resend;
         }
     }
 }
