--- a/packages/ui-library/src/css/_reports.scss
+++ b/packages/ui-library/src/css/_reports.scss
@@ -217,7 +217,7 @@
                     &:before {
                         color: default;
                         font-family: $icon-font;
-                        content: '\47';
+                        content: $icon-grip;
                         margin-left: -15px - 4px;
                         margin-right: 15px - 4px;
                     }
@@ -230,7 +230,7 @@
                             transition: all 0.2s;
                             font-size: 11px;
                             font-family: $icon-font;
-                            content: '\31';
+                            content: $icon-spin-up;
                             position: absolute;
                             margin-left: 5px;
                         }
