--- a/packages/ui-library/src/css/_settings-sections.scss
+++ b/packages/ui-library/src/css/_settings-sections.scss
@@ -235,7 +235,7 @@
             @include grab-cursor;
 
             &:before {
-                content: '\47';
+                content: $icon-grip;
                 text-transform: none;
                 font-size: 18px;
                 font-family: 'iconfont';
