--- a/packages/ui-library/src/css/layout/_messages.scss
+++ b/packages/ui-library/src/css/layout/_messages.scss
@@ -49,7 +49,7 @@
         margin-left: $spacing-lg;
 
         &:after {
-            content: '\78';
+            content: $icon-close;
             font-size: 20px;
             font-family: 'iconfont';
             vertical-align: middle;
