UIP-2938: Added icon styles [end-user]

--- a/packages/end-user/src/css/styles.scss
+++ b/packages/end-user/src/css/styles.scss
@@ -68,6 +68,7 @@
 @import './shared/device-table';
 @import './shared/device-icon';
 @import './shared/tile-selector';
+@import './shared/icons';
 
 // spacing components are after so they take precedence\
 
