--- a/packages/end-user/src/css/shared/_flex-row.scss
+++ b/packages/end-user/src/css/shared/_flex-row.scss
@@ -123,7 +123,7 @@
     @media (max-width: $breakpoint-mobile) {
         flex-direction: column;
 
-        *:not(:last-child) {
+        & > *:not(:last-child) {
             width: 100%;
             margin-bottom: 20px;
             margin-right: 0;
