UIP-2879: End user phone input

--- a/packages/end-user/src/css/styles.scss
+++ b/packages/end-user/src/css/styles.scss
@@ -50,6 +50,7 @@
 @import './components/tooltip';
 @import './components/two-sided';
 @import './components/profile-image';
+@import './components/phone-input';
 
 @import './shared/modal';
 @import './shared/tabs';
