--- a/packages/end-user/src/css/components/_text-input.scss
+++ b/packages/end-user/src/css/components/_text-input.scss
@@ -44,51 +44,31 @@
     }
 }
 
-/**
- * NOTE: For backwards-compatibility we unset bg images in favor
- * of font icon pseudo elements only if inside a wrapper
- */
-.text-input-wrapper {
+.text-input__icon {
+    font-family: $icon-font;
+    font-size: 16px;
+    line-height: 16px;
+    text-transform: none;
     position: relative;
-    text-align: center;
+    width: 100%;
 
-    .text-input {
-        display: unset;
-
-        &--error, &--error:focus {
-            background: $color-white;
-        }
-
-        &--success {
-            background: $color-white;
-        }
+    &::before {
+        position: absolute;
+        right: $spacing-md;
+        top: calc(45px * 0.5 - (16px / 2));
     }
 
     &--error {
-        &::after {
+        &::before {
             content: $pingicon-error-triangle;
-            font-family: $icon-font;
             color: $color-critical-red;
-            font-size: 16px;
-            line-height: 16px;
-            text-transform: none;
-            position: absolute;
-            top: calc(50%-8px);
-            right: $spacing-sm;
         }
     }
 
     &--success {
-        &::after {
+        &::before {
             content: $pingicon-success-round;
-            font-family: $icon-font;
-            color: $color-success;
-            font-size: 16px;
-            line-height: 16px;
-            text-transform: none;
-            position: absolute;
-            top: calc(50%-8px);
-            right: $spacing-sm;
+            color: $color-success-green;
         }
     }
 }
