--- a/packages/end-user/src/css/shared/_modal.scss
+++ b/packages/end-user/src/css/shared/_modal.scss
@@ -172,9 +172,9 @@
     }
     &.dialog {
         $modal-width: 350px;
-
         .modal-content {
-            width: $modal-width;
+            width: 100%;
+            max-width: $modal-width;
         }
         .modal-title,
         .body-title {
