Fix end-user dropdown z-index

--- a/packages/end-user/src/css/components/_dropdown.scss
+++ b/packages/end-user/src/css/components/_dropdown.scss
@@ -83,6 +83,7 @@ $caret-height: 16px;
         margin: -1px 0 0;
         padding: 0;
         list-style: none;
+        z-index: 1;
     }
 
     &--cardwidth {
