--- a/packages/ui-library/src/css/_text.scss
+++ b/packages/ui-library/src/css/_text.scss
@@ -84,6 +84,10 @@
         width: 100%;
     }
 
+    &--overflow-wrap {
+        @include break-word;
+    }
+
     &--center {
         text-align: center;
     }
