WIP-3071-outbound-provisioning-template

--- a/packages/ui-library/src/css/_help.scss
+++ b/packages/ui-library/src/css/_help.scss
@@ -51,6 +51,7 @@
 
         &.show {
             opacity: 1;
+            visibility: visible;
         }
         &.tooltip-text-link {
             &:hover {
