--- a/packages/ui-library/src/css/layout/_messages.scss
+++ b/packages/ui-library/src/css/layout/_messages.scss
@@ -443,6 +443,10 @@
     &--nomargin {
         margin: 0;
     }
+
+    &--noBottomMargin {
+        margin-bottom: 0;
+    }
 }
 
 .inline-message-text--full-width {
