--- a/packages/ui-library/src/css/icons/_variables.scss
+++ b/packages/ui-library/src/css/icons/_variables.scss
@@ -94,6 +94,7 @@ $icon-nodes: "\e911";
 $icon-non-interactive: "\e91a";
 $icon-notepad: "\e90b";
 $icon-on-off: "\e910";
+$icon-open-lock: "\e943";
 $icon-org-chart: "\e915";
 $icon-overview: "\6f";
 $icon-pin: "\4e";
