--- a/packages/end-user/src/css/icons/_variables.scss
+++ b/packages/end-user/src/css/icons/_variables.scss
@@ -1,15 +1,17 @@
 $icomoon-font-family: "iconfont" !default;
 $icomoon-font-path: "./fonts/icons" !default;
 
+$pingicon-open-lock: "\e943";
+$pingicon-download-box: "\e942";
 $pingicon-camera: "\e935";
 $pingicon-email: "\e936";
 $pingicon-ghost-disabled: "\e937";
 $pingicon-ghost-timed-out: "\e938";
-$pingicon-spinner: "\e939";
+$pingicon-spinner-alt: "\e939";
 $pingicon-error: "\e93a";
 $pingicon-hour-glass: "\e93b";
 $pingicon-safe: "\e93c";
-$pingicon-success: "\e93d";
+$pingicon-success-alt: "\e93d";
 $pingicon-ghost-error: "\e93e";
 $pingicon-ghost-success: "\e93f";
 $pingicon-incomplete: "\e940";
@@ -120,8 +122,8 @@ $pingicon-sort-none: "\7c";
 $pingicon-sp: "\7f";
 $pingicon-spin-down: "\30";
 $pingicon-spin-up: "\31";
-$pingicon-spinner1: "\50";
-$pingicon-success1: "\79";
+$pingicon-spinner: "\50";
+$pingicon-success: "\79";
 $pingicon-success-round: "\e92e";
 $pingicon-support: "\71";
 $pingicon-tag: "\e924";
