UIP-3097 added icon to rockerbutton

--- a/packages/ui-library/src/css/_buttons.scss
+++ b/packages/ui-library/src/css/_buttons.scss
@@ -465,6 +465,15 @@ button,
             pointer-events: none;
         }
     }
+
+    .icon {
+        vertical-align: bottom;
+    }
+
+    .icon__graphic {
+        line-height: unset;
+    }
+
     &.sel-0 button:nth-of-type(1),
     &.sel-1 button:nth-of-type(2),
     &.sel-2 button:nth-of-type(3),
