UIP-3052: Create LineChart

--- a/packages/ui-library/src/css/layout/_charts.scss
+++ b/packages/ui-library/src/css/layout/_charts.scss
@@ -213,6 +213,13 @@
     }
 }
 
+.line-chart {
+    .recharts-line {
+        stroke-linecap: round;
+        stroke-linejoin: round;
+    }
+}
+
 .heatmap {
     $cell-size: 20px;
 
