UIP-3052: Create ColumnChart/Legend/ColumnCard

--- a/packages/ui-library/src/css/_layout.scss
+++ b/packages/ui-library/src/css/_layout.scss
@@ -1,6 +1,7 @@
 @import 'charting/chip-panel';
 @import 'charting/multiseries-chart';
 @import 'charting/dropdown-selector';
+@import 'charting/legend';
 @import 'general/global-message';
 @import 'general/image-component';
 @import 'layout/dashboard-cards';
