UIP-3071 - add border to helphint

--- a/packages/ui-library/src/css/_help.scss
+++ b/packages/ui-library/src/css/_help.scss
@@ -20,6 +20,10 @@
         }
     }
 
+    &>.border {
+        border: 1px solid $color-blue-grey !important;
+    }
+
     @mixin default-icon-styles {
         height: $inline-icon-height;
         font-size: $inline-icon-height;
